Fixing Java best practice issues